<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="landing_main_button_title">Empieza ahora</string>
    <string name="landing_transparent_button_title">Ya tengo una cuenta</string>
    <string name="wrong_email_alert">Correo electrónico inválido</string>
    <string name="wrong_password_alert">La contraseña debe ser de al menos 8 caracteres e incluir un número, un carácter especial y una mayúscula.</string>
    <string name="login_button_title">Iniciar Sesión</string>
    <string name="login_button_pass">Recuperar Contraseña</string>
    <string name="login_forgot"><u>Olvide mi contraseña</u></string>
    <string name="home_permissions">Dar Permisos</string>
    <string name="home_activate_camera">Activar Camara</string>
    <string name="video">Video</string>
    <string name="translate">Traductor</string>
    <string name="dictionary">Diccionario</string>
    <string name="profile">Perfil</string>
    <string name="report_title">Reportar Traducción</string>
    <string name="repot_body">Antes de enviar el reporte, por favor verifica que las señas utilizadas estén disponibles en <b>nuestro diccionario</b>.</string>
    <string name="report_button1">Diccionario</string>
    <string name="report_button2">Reportar</string>
    <string name="hint_report_input">Escríbenos que está mal con tu traducción....</string>
    <string name="favorite">Favoritos</string>
    <string name="translate_title">Lensegua</string>
    <string name="translate_hint">Escribe el texto que deseas traducir...</string>
    <string name="translate_title2">Español</string>
    <string name="translate_button">Traducir</string>
    <string name="continuar">Continuar</string>

</resources>